[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic_utils"
authors = [{name = "Santiago Luis Rizo Verbel", email = "santi.rizo@hotmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/BinaryHoneymoon/BinaryHoneymoon"
